--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#555"
-    tools:context=".ImageActivity">
+    tools:context=".image.ImageActivity">
     <ImageView
         android:transitionName="iv_img"
         android:src="@mipmap/ic_launcher"
