--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -2,8 +2,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <WebView
-        android:id="@+id/webview"
+    <TextView
+        android:text="Hello World !"
+        android:gravity="center"
+        android:textSize="30sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
